--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,9 @@ tracing-subscriber = "0.3.17"
 url = "2.3.1"
 webpki-roots = "0.23.0"
 
+[features]
+thread_per_core = []
+
 [profile.bench]
 debug = true
 
