--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ anyhow = "1.0.71"
 blake3 = "1.3.3"
 bytes = { version = "1.4.0", features = ["serde"] }
 clap = { version = "4.2.7", features = ["derive"] }
+dirs-next = "2.0.0"
 ed25519-dalek = { version = "2.0.0-rc.2", features = ["serde", "rand_core"] }
-flume = "0.10.14"
 futures = "0.3.28"
 hex = "0.4.3"
 num_cpus = "1.15.0"
@@ -23,13 +23,16 @@ quinn = "0.10.1"
 rand = "0.8.5"
 rcgen = "0.10.0"
 rustls = { version = "0.21.1", features = ["quic", "dangerous_configuration"] }
+rustls-pemfile = "1.0.2"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_bytes = "0.11.9"
 socket2 = { version = "0.5.3", features = ["all"] }
 thiserror = "1.0.40"
 tokio = { version = "1.28.1", features = ["full", "rt-multi-thread"] }
+tokio-util = "0.7.8"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
+webpki-roots = "0.23.0"
 
 [profile.bench]
 debug = true
