--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ tokio = { version = "1.28.1", features = ["full", "rt-multi-thread"] }
 tokio-util = "0.7.8"
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
+url = "2.3.1"
 webpki-roots = "0.23.0"
 
 [profile.bench]
