--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "waht"
 version = "0.1.0"
 edition = "2021"
 readme = "README.md"
-description = "wow awesome hash tracker"
+description = "waht awesome hash tracker"
 license = "MIT/Apache-2.0"
 authors = ["Frando", "n0 team"]
 repository = "https://github.com/n0-computer/waht"
