--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ anyhow = "1.0.71"
 blake3 = "1.3.3"
 bytes = { version = "1.4.0", features = ["serde"] }
 clap = { version = "4.2.7", features = ["derive"] }
+derive_more = "0.99.17"
 dirs-next = "2.0.0"
 ed25519-dalek = { version = "2.0.0-rc.2", features = ["serde", "rand_core"] }
 futures = "0.3.28"
@@ -29,14 +30,11 @@ serde_bytes = "0.11.9"
 socket2 = { version = "0.5.3", features = ["all"] }
 thiserror = "1.0.40"
 tokio = { version = "1.28.1", features = ["full", "rt-multi-thread"] }
-tokio-util = "0.7.8"
+tokio-util = { version = "0.7.8", features = ["io"] }
 tracing = "0.1.37"
 tracing-subscriber = "0.3.17"
 url = "2.3.1"
 webpki-roots = "0.23.0"
 
 [profile.bench]
-debug = true
-
-[profile.release]
 debug = true
